	* Resolve an issue when connecting to iChat Server when no resource
	  is specified.
	* Fix a crash when adding a buddy without an '@'.

	General:
	* New 'plugins' sub-command to 'debug' command (i.e. '/debug plugins')
	  to announce the list of loaded plugins (in both Finch and Pidgin).
	* Fix a crash when performing DNS queries on Unixes that use the
	  blocking DNS lookups.  (Brian Lu)

version 2.6.2 (09/05/2009):
	libpurple:
	* Fix --disable-avahi to actually disable it in configure, as opposed
	  to just making the warning non-fatal.
	* Fix using GNOME proxy settings properly.  (Erik van Pienbroek)

	IRC:
	* Fix parsing of invalid TOPIC messages.  (CVE-2009-2703)

	MSN:
	* Sending custom smileys in chats is now supported.
	* Ink messages are now saved when using the HTML logger.
	* Fix a crash when receiving some handwritten messages.
	* Fix a crash when receiving certain SLP invite messages.
	* Chats with multiple people should no longer spontaneously
	  disconnect.

	XMPP:
	* Prompt the user before cancelling a presence subscription.
	* Escape status messages that have HTML entities in the Get Info dialog.
	* Fix connecting to XMPP domains with no SRV records from Pidgin on
	  Windows.
	* Fix typing notifications with Pidgin 2.5.9 or earlier.
	* Fix connecting using BOSH and legacy authentication (XEP-0078).
	* Adding buddies of the form "romeo@montague.net/Resource" are handled
	  properly.  In addition, it is no longer possible to add buddies of
	  the form "room@conference.example.net/User", where
	  room@conference.example.net is a MUC.
	* Don't crash when receiving "smileyfied" XHTML-IM from clients that don't
	  support bits of binary (ie. when getting an empty <data/> in return)
	* Fix bug where SSL/TLS was not required even though the
	  "require SSL/TLS" preference checked when connecting to servers
	  that use the older iq-based authentication.  (CVE-2009-3026)

	Yahoo!/Yahoo! JAPAN: